--- a/XamCross/XamCross/Views/Timer.xaml
+++ b/XamCross/XamCross/Views/Timer.xaml
@@ -1,5 +1,6 @@
-﻿<!-- Display Dynamic Binding with ViewModel -->
-    <?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<!-- Display Dynamic Binding with ViewModel -->
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamCross.Views.Timer">
