--- a/XamCross/XamCross/Views/DBlistViewCell.xaml
+++ b/XamCross/XamCross/Views/DBlistViewCell.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamCross.Views.DBlistViewCell">
     <ContentPage.Content>
-        <StackLayout>
+       <!-- <StackLayout>
             <ListView 
                         x:Name="todayActivities"
                         SeparatorColor="Transparent"
@@ -27,5 +27,6 @@
                 </ListView.ItemTemplate>
             </ListView>
         </StackLayout>
+        -->
     </ContentPage.Content>
 </ContentPage>
